# gdb_server_stub_sv

./: .gitmodules  .library_mapping.xml  .project  README.adoc  SCRATCHPAD.md  meson.build
doc/: gdb_server_stub.drawio  gdbwave.md  nerv.md
hdl/: gdb_adapter.sv  gdb_server_stub.sv  gdb_server_stub_pkg.sv  gdb_server_stub_tb.sv  gdb_shadow_pkg.sv  hdldb_shadow.cpp  socket_dpi_pkg.c  socket_dpi_pkg.sv
hdl/nerv/: nerv_gdb.sv  nerv_soc.sv  nerv_tb.sv
sim/: run-questa.sh  sources-nerv.mk
sim/questa/: Makefile
src/: AddressMap.h  Instruction.h  Instruction.hpp  Makefile  Point.h  Registers.cpp  SConstruct  Shadow.cpp  Shadow.h  Soc.h  Soc.hpp  hdldb.cpp  hdldb.hpp  hdldb_shadow.cpp  meson.build
src/rsp/: Packet.cpp  Packet.h  Packet.hpp  Protocol.cpp  Protocol.hpp  Socket.cpp  Socket.h  Socket.hpp  rsp.hpp
src/shadow/: AddressMap.hpp  Core.cpp  Core.hpp  MemoryMap.cpp  MemoryMap.h  MemoryMap.hpp  Point.cpp  Point.hpp  Points.cpp  Points.hpp  Registers.cpp  Registers.hpp  Shadow.cpp  Shadow.h  Shadow.hpp  System.cpp  System.hpp
src/tests/: packet_test.cpp  test-packet.cpp  test-packet.py  test-switch.cpp  test-vector.cpp
test/firmware/: Makefile  gdb.cmd
